--- a/quarto/welcome.qmd
+++ b/quarto/welcome.qmd
@@ -10,53 +10,50 @@ format:
 
 Hello!
 
-Thank you for particpating in Datacember I hope that through this month you will be able to get some experience with a few projects, push your knowledge a bit further, and having fun in this challenge.
-I hope that you will be able to come away with a project or two in modelling or EDA and something to be proud of.
+Thank you for participating in Datacember! I hope that throughout this month, you’ll gain valuable experience through a few projects, push your knowledge further, and most importantly, have fun with this challenge.
 
-This should be a little quickstart guide, letting you know how things will work, where to find everything and what to expect.
+By the end of the month, I hope you’ll have a project or two in modeling or exploratory data analysis (EDA) that you can be proud of.
 
+This quickstart guide is here to help you get started by explaining how things will work, where to find everything, and what to expect.
 
 ## A little about the challenge
 
-Datacember is a month long data science challenge.
-Each week a new challenge with a new dataset will be released aimed at inspiring your thought in datascience. You will be able to work throught the week to complete this challenge, and answer a few questions about your work in a report. Upon submission you will recieve grading, which is a process that will repeat for the 4 weeks of December.
+Datacember is a month-long data science challenge.
+Each week, a new challenge with a unique dataset will be released to inspire your thinking in data science. You’ll have the week to complete the challenge and submit a report answering a few questions about your work. Upon submission, your work will be graded, and this process will repeat for all four weeks of December.
 
-At the end, we will try to showcase the best of the work and try produce some fully fledge reports on the data and the most interesting findings in a mock journal. Refer to the below sections to get a good understanding of how things will work. 
+At the end of the challenge, we’ll showcase the best work and aim to produce fully-fledged reports on the data and the most interesting findings in a mock journal.
 
-*The <a href="/"> home page </a> will be the central directory where you can find everything. Discord, Challenges, Guides and more.*
+Refer to the sections below for a detailed understanding of how everything works.
+
+The <a href="/">home page</a> will be your central hub for accessing everything—Discord, challenges, guides, and more.
 
 ## Prior Expectations
 
-Entering this challenge, there is an expectation that you will have a foundation of coding expereience (hopefully in R, or python or sql).While we understand that some people may not have this background, we have tried to make the challenges self elected, and the tools you use option.
-*Its important to note, that we care about your findings, not the methods used to find them*. This means that if youre really proficient with excel you can complete this challenge all in excel! Or if you want to learn python, this would be a great way to gain some epxerience coding in pandas (a python library). However, to make most advantage, it is best that you understand python. See our discord if you have any questions. 
+Entering this challenge, you’re expected to have basic coding experience, ideally in R, Python, or SQL. However, challenges are self-elected, and you can use any tool you prefer. *We care about your findings, not your methods.* Whether you work in Excel or want to learn Python with pandas, the choice is yours.
 
-Additionally, there is no assumption that you have a statistics or datasciene background. Just take the challenges at wherever you are, and see what you find. This could be a great way to brush up on some statistics, or learn a few practical things. While a throughough knowledge of stats will help you, it is not necessary.
-
-If your looking for some resources for datascience you can refer to the footer of this page.
+No prior knowledge of statistics or data science is assumed. Take the challenges at your own pace—this is a chance to learn and explore. For resources, check the footer of this page, and feel free to ask questions on Discord.
 
 ## Challenges
 
-Challenges will be released approximately every week. Each challenge description will contain all the necessary information you need to get started with your datascience journey. The first challenge is <a href="challenges/stars">right out now!</a>
+Challenges are released weekly, with all the information you need to start your data science journey. The first challenge is <a href="challenge/stars">out now!</a>
 
-Challenges difficulty is self tailored. Each challenge has 3 streams, **easy**, **medium** and **hard**, with additional leeway given to participants to opt for **wildcard**. Read through the descriptions and pick the one that resonantes most with you or you think you can do the most. 
+Each challenge has 3 difficulty levels: **easy**, **medium**, and **hard**, plus an optional **wildcard** stream. Choose the one that resonates with you or fits your skills best.
 
 ### Data in the Challenges
 
-Each challenge breif (<a href="/">found on the home page </a>) will contain all the information on where to find the data. Sometimes you will have to downlaod it from the internet, and other times you will have to use sql to acsess a database.
+Each challenge brief (<a href="/">found on the home page</a>) contains information on where to find the data. Sometimes you'll need to download it, and other times you’ll use SQL to access a database.
 
-The data is mostly 'structured' data, although there is one week on 'unstructured' data. Additionally, two weeks are on time series data, so you may really want to learn some timeseries modelling technique and really learn about it over two weeks.
+Most data is 'structured', with one week focused on 'unstructured' data. Additionally, two weeks cover time series data, so it’s a great opportunity to dive deep into time series modeling techniques.
 
 ### What to do in the Challenges
 
-Each challenge will give a somewhat vague guide on what you should do. Once you have selected your challenge stream for this week, you can undertake some research and discover what kinds of ways you want to take the challenge, or get started on working if you allready know what kind of approach you'd like to take.
+Each challenge provides a general guide on what to do. Once you've chosen your challenge stream, you can research and decide how to approach it, or dive right in if you already know your strategy.
 
-If your stuck and needing more hints, leave a message on the discord server, or message me directly.
+If you're stuck and need more hints, ask on the Discord server or message me directly.
 
 ### What to Do once Ive finished the challenge
 
 Once you have completed your coding section or analysis, if you head back to the home page, you can use the **quicklinks** section to navigate to the submissions form. Submit your work there and await grading
-
-For more on submissions you can find a submissions guide <a href="/guide/submissions">here.</a>
 
 <a href="/challenge/stars">Your first challenge is out now!</a>
 
@@ -72,6 +69,12 @@ For better or for worse, this is a project administered and coded all by me. So 
 If you notice a bug tell me direcetly and score <a href="guide/points">additional points!</a>
 
 I have made the github code public in the footer of this page, but don't look at it too hard because Im sure that your sickness will be positively correlated with time spent viewing the code.
+
+## Advent
+
+Each day return to the advent calendar to score additional points, and gain an overview of the upcoming deliverables and any new work released.
+
+It is acsessible from the home page, or it can also be accessed by clicking the calendar on the home page.
 
 ## RULES!
 
